@@ -1,0 +1,8 @@
+<div id="image-view">
+   <h1>{TITLE}</h1>
+   <div class="align-center">
+      {MULTIMEDIA}
+      <!-- BEGIN desc --><p class="padded">{DESCRIPTION}</p><!-- END desc -->
+   </div>
+</div>
+<div class="align-center">{CLOSE}</div>
